2009-11-27  Olivier Dagenais  <olivier.dagenais@gmail.com>
	* Mono.TextTemplating/ParsedTemplate.cs: Fixed a bug where the
	  location of an error was being ignored.

2009-11-27  Olivier Dagenais  <olivier.dagenais@gmail.com>

	* Mono.TextTemplating/TemplatingEngine.cs: Mark the generated
	  type as partial.

2009-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating/ParsedTemplate.cs: Don't check if
	  included file exists before trying to resolve it from the
	  host, because host may use include paths. Patch from Aaron
	  Bockover.

2009-08-17  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating/TemplatingEngine.cs: Fix NRE when
	  template fails to compile.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.TextTemplating.csproj: Include the ASP.NET MVC and
	  TextTemplating addins in the main solution and build.

2009-08-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.csproj:
	* Mono.TextTemplating/ParsedTemplate.cs:
	* Mono.TextTemplating/CompiledTemplate.cs:
	* Mono.TextTemplating/TemplatingEngine.cs:
	* Mono.TextTemplating/TemplateGenerator.cs:
	* Mono.TextTemplating/IExtendedTextTemplatingEngineHost.cs:
	  Add support for caching compiled templates, and a couple of
	  bugfixes. Patch from Nathan Baulch
	  (nathan.baulch@gmail.com).

2009-06-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating/TemplatingEngine.cs: Handle expressions
	  and content in helpers, based on patch from Nathan Baulch.
	  Liberally add C# 3 sugar to neaten up CodeDOM usage.

2009-06-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating/TemplateGenerator.cs: Added overload for
	  Process template that uses input/output strings directly,
	  avoiding file read/write. Expose engine to subclasses.

	* Mono.TextTemplating/Tokeniser.cs: Remove outdated TODO.

2009-04-13  Michael Hutchinson  <mhutchinson@novell.com>
